[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Denis Lavrentev"]
license = "MIT AND Apache-2.0"
edition = "2021"
repository = "https://github.com/defernus/code-selection"
keywords = ["boilerplate", "workspace", "example", "preset"]

[workspace.dependencies]
macroquad = "0.4.5"
rand = "0.8"
nohash-hasher = "0.2"
enum_dispatch = "0.3"
rayon = "1.10"

# project packages
code-selection = { version = "0.1.0", path = "./crates/code-selection" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
