[package]
name = "code-selection"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }


[dependencies]
macroquad.workspace = true
rand.workspace = true
rayon.workspace = true
nohash-hasher.workspace = true
enum_dispatch.workspace = true
